Change Log:
v0.7
  - added nd_test_nets dataset, a list networkDynamic objects with unusual configurations and parameters to be used for testing
  - fixed bug in spells.overlap and adding missing tests
  - Added when.vertex.attrs.match and when.edge.attrs.match functions for getting times at which TEA attributes of network elements match specified values according to specified operators.

v0.6.3
 - CRAN-request update to fix compatibility of test with testthat v0.8.1

v0.6.2 - Minor fix
 - CRAN-requested update to fix compatibility of test with R-trunk

v0.6 - Features & bug fixes
 New Features:
  - added get.dyads.active function to facilitate looking up the vertex ids of the heads and tails of active edges of a non-hypergraphic network
  - some refactoring of network.extract and network.collapse and get.vertex.attribute.active for speed improvements
  - reimplemented is.active in C to speed up operations on large networks with lots of time steps
  - added adjust.activity() function to transform the all of the known activity spell values in a networkDynamic object
  - converted add.edges to add.edges.networkDynamic, add.edge to add.edge.networkDynamic and add.vertices to add.vertices.networkDynamic to more correctly use S3 dispatching that was added in network v1.9
  - changed argument order of add.edges.active and add.vertices.active to avoid S3 warnings and implemented pass-through for additional arguments. 
 Fixes:
  - Added 'earlier' and 'latest' rules to additional functions for compatibility only: when testing for activity they evaluate the same as 'any'.
  - fixed bug in get.edge.activity(...,as.SpellList=TRUE) that would unexpectedly censor onset and terminus times to net.obs.period if it existed. 
  - add.vertices.active no longer gives an error if the number of vertices to add is zero. 

v0.5.2 - Features & bug fixes
 New Features:
  - network.extract() function now truncates the observation spells of the net.obs.period attribute (if it is present)