@@ -1,0 +1,264 @@
+//Comment: SoNIA input file as generated by Siena.
+//trying to add dummy colums
+NodeId	Label	StartTime	EndTime	Happiness	Unchanging
+1	1	0	10	1	A
+2	2	0	10	2	A
+3	3	0	10	1	A
+4	4	0	10	3	A
+5	5	0	10	2	A
+6	6	0	10	2	A
+7	7	0	10	2	A
+8	8	0	10	1	A
+9	9	0	10	1	A
+10	10	0	10	3	A
+11	11	0	10	3	A
+12	12	0	10	3	A
+13	13	0	10	3	A
+14	14	0	10	1	A
+15	15	0	10	1	A
+16	16	0	10	1	A
+17	17	0	10	1	A
+18	18	0	10	1	A
+19	19	0	10	3	A
+20	20	0	10	3	A
+21	21	0	10	2	A
+22	22	0	10	2	A
+23	23	0	10	2	A
+24	24	0	10	2	A
+25	25	0	10	2	A
+26	26	0	10	1	A
+27	27	0	10	3	A
+28	28	0	10	1	A
+29	29	0	10	1	A
+30	30	0	10	1	A
+31	blinker	0	0.1	1	A
+31	BLINKER	0.1	0.2	1	A
+31	blinker	0.2	0.3	1	A
+31	blinker	0.4	0.5	1	A
+31	blinker	0.6	0.7	1	A
+31	blinker	0.8	0.9	1	A
+32	H	0.01	0.01	2	A
+32	HE	0.01	0.02	3	A
+32	HEL	0.03	0.04	1	A
+32	HELL	0.04	0.05	1	A
+32	HELLO	0.05	0.2	1	A
+32	HELLO WORLD!	0.2	0.7	1	A
+FromId	ToId	StartTime	EndTime	ArcWeight
+30	31	 0.000000	 0.5	2
+30	21	 0.000000	 0.097252	 1
+23	30	 0.000000	 0.101168	 1
+14	24	 0.000000	 0.108603	 1
+25	23	 0.000000	 0.114026	 1
+20	11	 0.000000	 0.126713	 1
+10	12	 0.000000	 0.130070	 1
+12	27	 0.000000	 0.140244	 1
+23	22	 0.000000	 0.140244	 1
+13	25	 0.000000	 0.140287	 1
+30	6	 0.000000	 0.140295	 1
+12	15	 0.000000	 0.140316	 1
+21	30	 0.000000	 0.140331	 1
+29	4	 0.000000	 0.165760	 1
+14	18	 0.140243	 0.167484	 1
+11	22	 0.000000	 0.201691	 1
+29	17	 0.000000	 0.201926	 1
+6	19	 0.000000	 0.202162	 1
+12	11	 0.000000	 0.202318	 1
+25	5	 0.000000	 0.202737	 1
+13	5	 0.000000	 0.206781	 1
+12	24	 0.000000	 0.209848	 1
+19	5	 0.000000	 0.221880	 1
+24	27	 0.119576	 0.222213	 1
+2	6	 0.136835	 0.238886	 1
+6	16	 0.000000	 0.242088	 1
+7	24	 0.000000	 0.244211	 1
+7	4	 0.000000	 0.251904	 1
+10	15	 0.000000	 0.252368	 1
+12	7	 0.000000	 0.259494	 1
+23	14	 0.000000	 0.265313	 1
+30	16	 0.000000	 0.265524	 1
+10	13	 0.000000	 0.265604	 1
+26	10	 0.000000	 0.265736	 1
+9	2	 0.169135	 0.265879	 1
+20	30	 0.000000	 0.265958	 1
+10	26	 0.000000	 0.278197	 1
+20	4	 0.000000	 0.279792	 1
+5	12	 0.263492	 0.292299	 1
+20	25	 0.000000	 0.353748	 1
+13	22	 0.000000	 0.361437	 1
+20	16	 0.000000	 0.363475	 1
+19	8	 0.000000	 0.400166	 1
+26	12	 0.251673	 0.406281	 1
+7	9	 0.000000	 0.423435	 1
+14	13	 0.000000	 0.423440	 1
+11	12	 0.000000	 0.423472	 1
+6	4	 0.117198	 0.447896	 1
+30	23	 0.000000	 0.450421	 1
+24	17	 0.000000	 0.451554	 1
+12	4	 0.000000	 0.451634	 1
+6	20	 0.000000	 0.451715	 1
+30	18	 0.000000	 0.453976	 1
+28	26	 0.000000	 0.466188	 1
+1	29	 0.251557	 0.470009	 1
+30	14	 0.000000	 0.479016	 1
+3	20	 0.202946	 0.479659	 1
+16	14	 0.477568	 0.480302	 1
+16	26	 0.108660	 0.595963	 1
+4	11	 0.000000	 0.616960	 1
+11	4	 0.000000	 0.616968	 1
+10	21	 0.000000	 0.617781	 1
+25	20	 0.000000	 0.617801	 1
+17	1	 0.000000	 0.617861	 1
+27	29	 0.412396	 0.617878	 1
+2	28	 0.000000	 0.617885	 1
+30	19	 0.000000	 0.617967	 1
+26	25	 0.617856	 0.618734	 1
+13	2	 0.262966	 0.619557	 1
+19	6	 0.000000	 0.619691	 1
+23	19	 0.000000	 0.619743	 1
+30	10	 0.000000	 0.634207	 1
+10	3	 0.277399	 0.643247	 1
+30	13	 0.000000	 0.666686	 1
+20	21	 0.617869	 0.667011	 1
+2	13	 0.462932	 0.667336	 1
+3	30	 0.000000	 0.667986	 1
+15	7	 0.222545	 0.668041	 1
+23	10	 0.000000	 0.668060	 1
+11	1	 0.617794	 0.777109	 1
+4	24	 0.000000	 0.777123	 1
+28	1	 0.420675	 0.777125	 1
+10	13	 0.606006	 0.777128	 1
+24	27	 0.445265	 0.777132	 1
+11	12	 0.722502	 0.777140	 1
+25	18	 0.000000	 0.777163	 1
+14	29	 0.445371	 0.777174	 1
+30	25	 0.000000	 0.777185	 1
+23	5	 0.478051	 0.777201	 1
+10	26	 0.477086	 0.777208	 1
+30	3	 0.000000	 0.777216	 1
+18	28	 0.265781	 0.777238	 1
+27	1	 0.133428	 0.901774	 1
+25	14	 0.000000	 0.982310	 1
+30	20	 0.000000	 0.983012	 1
+19	25	 0.000000	 0.983924	 1
+23	6	 0.000000	 0.999098	 1
+16	8	 0.617974	 0.999410	 1
+18	2	 0.417915	 0.999423	 1
+29	1	 0.000000	 0.999645	 1
+21	3	 0.000000	 0.999775	 1
+1	17	 0.165736	10.000000	 1
+1	29	 0.957583	10.000000	 1
+2	8	 0.481111	10.000000	 1
+2	18	 0.000000	10.000000	 1
+2	26	 0.000000	10.000000	 1
+3	17	 0.777095	10.000000	 1
+3	21	 0.000000	10.000000	 1
+3	23	 0.281589	10.000000	 1
+4	11	 0.777102	10.000000	 1
+4	12	 0.645055	10.000000	 1
+4	17	 0.000000	10.000000	 1
+4	29	 0.000000	10.000000	 1
+5	10	 0.575876	10.000000	 1
+5	16	 0.222201	10.000000	 1
+5	18	 0.222386	10.000000	 1
+5	19	 0.619696	10.000000	 1
+5	21	 0.192304	10.000000	 1
+5	22	 0.246334	10.000000	 1
+5	23	 0.619720	10.000000	 1
+6	5	 0.265985	10.000000	 1
+6	10	 0.000000	10.000000	 1
+6	13	 0.000000	10.000000	 1
+6	22	 0.616951	10.000000	 1
+6	23	 0.000000	10.000000	 1
+7	1	 0.000000	10.000000	 1
+7	11	 0.000000	10.000000	 1
+7	12	 0.000000	10.000000	 1
+7	15	 0.000000	10.000000	 1
+7	17	 0.000000	10.000000	 1
+7	24	 0.273947	10.000000	 1
+7	27	 0.000000	10.000000	 1
+7	29	 0.000000	10.000000	 1
+8	18	 0.000000	10.000000	 1
+8	26	 0.000000	10.000000	 1
+9	15	 0.276602	10.000000	 1
+9	17	 0.932857	10.000000	 1
+10	5	 0.619494	10.000000	 1
+10	6	 0.251441	10.000000	 1
+10	14	 0.000000	10.000000	 1
+10	16	 0.000000	10.000000	 1
+10	18	 0.000000	10.000000	 1
+10	19	 0.000000	10.000000	 1
+10	23	 0.000000	10.000000	 1
+10	30	 0.617807	10.000000	 1
+11	27	 0.000000	10.000000	 1
+12	17	 0.000000	10.000000	 1
+12	29	 0.000000	10.000000	 1
+13	6	 0.777020	10.000000	 1
+13	14	 0.000000	10.000000	 1
+13	19	 0.265932	10.000000	 1
+13	20	 0.000000	10.000000	 1
+13	28	 0.120369	10.000000	 1
+13	30	 0.984837	10.000000	 1
+14	2	 0.222219	10.000000	 1
+14	4	 0.617328	10.000000	 1
+14	20	 0.668023	10.000000	 1
+14	28	 0.264545	10.000000	 1
+15	1	 0.108507	10.000000	 1
+15	11	 0.000000	10.000000	 1
+15	12	 0.097741	10.000000	 1
+15	17	 0.776944	10.000000	 1
+15	24	 0.000000	10.000000	 1
+15	27	 0.000000	10.000000	 1
+15	29	 0.241767	10.000000	 1
+16	25	 0.000000	10.000000	 1
+17	4	 0.000000	10.000000	 1
+17	12	 0.180720	10.000000	 1
+17	29	 0.000000	10.000000	 1
+18	8	 0.000000	10.000000	 1
+18	22	 0.616049	10.000000	 1
+18	26	 0.000000	10.000000	 1
+19	2	 0.617852	10.000000	 1
+19	3	 0.445159	10.000000	 1
+19	10	 0.000000	10.000000	 1
+19	13	 0.140302	10.000000	 1
+19	14	 0.423435	10.000000	 1
+19	16	 0.000000	10.000000	 1
+19	18	 0.153048	10.000000	 1
+19	21	 0.423436	10.000000	 1
+19	23	 0.000000	10.000000	 1
+19	26	 0.000000	10.000000	 1
+19	30	 0.203155	10.000000	 1
+20	13	 0.000000	10.000000	 1
+20	14	 0.777246	10.000000	 1
+20	26	 0.072939	10.000000	 1
+20	28	 0.000000	10.000000	 1
+20	30	 0.655871	10.000000	 1
+21	2	 0.870710	10.000000	 1
+21	23	 0.555790	10.000000	 1
+22	5	 0.000000	10.000000	 1
+22	6	 0.617892	10.000000	 1
+22	11	 0.000000	10.000000	 1
+22	18	 0.480808	10.000000	 1
+22	23	 0.000000	10.000000	 1
+23	3	 0.641439	10.000000	 1
+23	21	 0.174928	10.000000	 1
+24	1	 0.999436	10.000000	 1
+24	4	 0.000000	10.000000	 1
+24	15	 0.000000	10.000000	 1
+24	17	 0.535703	10.000000	 1
+24	29	 0.616954	10.000000	 1
+25	16	 0.000000	10.000000	 1
+26	2	 0.000000	10.000000	 1
+26	8	 0.000000	10.000000	 1
+26	16	 0.000000	10.000000	 1
+26	18	 0.000000	10.000000	 1
+26	19	 0.222208	10.000000	 1
+26	22	 0.480505	10.000000	 1
+27	11	 0.000000	10.000000	 1
+27	15	 0.000000	10.000000	 1
+28	2	 0.000000	10.000000	 1
+28	8	 0.000000	10.000000	 1
+28	14	 0.469730	10.000000	 1
+28	18	 0.000000	10.000000	 1
+28	20	 0.000000	10.000000	 1
+29	12	 0.824020	10.000000	 1
+29	17	 0.265905	10.000000	 1
